# SNE

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: labeler.yml  main.yml
src/: SNE.py  sne.py
tests/: test_edge_cases.py  test_sne.py
