[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"
 
[project]
name="SNE"
version = "0.0.1"
authors = [
  {name="Philipp Albert", email="philipp.albert1504@gmail.com" },
]
# readme = "README.md" --> README.md cannot be resolved when running CI/CD Pipeline
dependencies = [
    "plotly", 
    "torch",
    "numpy", 
    "pandas"
]
classifiers = [
  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12, <3.13"
 
 
[project.optional-dependencies]
dev = ["pre-commit", "ruff"]
testing = [
    "pytest",
    "pytest-cov",
]
all = ["SNE[dev, testing]"]